[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/title.png" type="Texture" id=1]
[ext_resource path="res://assets/Fonts/Born2bSportyV2.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://TitleScreen.gd" type="Script" id=3]
[ext_resource path="res://src/World/ScreenTransition.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/World/Levels/FadeIn.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.466667 )
border_width_left = 16
border_width_top = 16
border_width_right = 16
border_width_bottom = 16
border_color = Color( 0.945098, 1, 0.00392157, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0 )
border_width_left = 16
border_width_top = 16
border_width_right = 16
border_width_bottom = 16
border_color = Color( 0.945098, 1, 0.00392157, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="Theme" id=2]
Button/colors/font_color = Color( 0.937255, 1, 0.207843, 1 )
Button/colors/font_color_focus = Color( 0.937255, 1, 0.207843, 1 )
Button/colors/font_color_hover = Color( 0.937255, 1, 0.207843, 1 )
Button/fonts/font = SubResource( 1 )
Button/styles/focus = SubResource( 5 )
Button/styles/hover = SubResource( 5 )
Button/styles/normal = SubResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=7]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 3 )

[node name="Title" type="Sprite" parent="."]
scale = Vector2( 2.37528, 2.37528 )
texture = ExtResource( 1 )
centered = false

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer"]
margin_left = 716.0
margin_top = 174.0
margin_right = 1204.0
margin_bottom = 906.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MarginContainer"]
margin_right = 488.0
margin_bottom = 732.0
alignment = 1

[node name="Label4" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer"]
margin_right = 488.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 3 )

[node name="Label5" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 488.0
margin_bottom = 132.0
custom_fonts/font = SubResource( 3 )

[node name="Label7" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 488.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 3 )

[node name="Label8" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer"]
margin_top = 204.0
margin_right = 488.0
margin_bottom = 268.0
custom_fonts/font = SubResource( 3 )

[node name="Label6" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer"]
margin_top = 272.0
margin_right = 488.0
margin_bottom = 336.0
custom_fonts/font = SubResource( 3 )

[node name="Play" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer"]
margin_top = 340.0
margin_right = 488.0
margin_bottom = 500.0
text = "SPACE"

[node name="Label3" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer"]
margin_top = 504.0
margin_right = 488.0
margin_bottom = 568.0
custom_fonts/font = SubResource( 3 )

[node name="Quit Game" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer"]
margin_top = 572.0
margin_right = 488.0
margin_bottom = 732.0
text = "Quit Game"

[node name="ScreenTransition" parent="." instance=ExtResource( 4 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
anims/FadeIn = SubResource( 7 )
anims/RESET = SubResource( 8 )

[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer/Quit Game" to="." method="_on_Quit_Game_pressed"]
[connection signal="animation_finished" from="CanvasLayer/AnimationPlayer" to="CanvasLayer" method="_on_AnimationPlayer_animation_finished"]
